@@ -1,5 +1,5 @@
 public class Twofer {
   public String twofer(String name) {
-    return String.format("One for %s, one for me.", (name == null) ? "you" : name);
+    return "One for %s, one for me.".formatted((name == null) ? "you" : name);
   }
 }
